testsuite/serd-tests/good/test-integer-ends-with-dot.nt
<http://example.org/eg#s> <http://example.org/eg#p> "12"^^<http://www.w3.org/2001/XMLSchema#integer> .
