testsuite/serd-tests/bad/bad-nt-syntax-uri-bar.nt
# Bad IRI : bar.
<http://example/|oops|> <http://example/p> <http://example/o> .
